--- a/alerta-movil/package.json
+++ b/alerta-movil/package.json
@@ -9,7 +9,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.0.0-alpha5",
+    "react-router-dom": "^5.2.0",
+    "axios": "^0.19.2"
   },
   "scripts": {
     "start": "react-scripts start",
